--- a/playwright/pom.xml
+++ b/playwright/pom.xml
@@ -10,6 +10,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>2.0.9</version>
+		</dependency>
+		<dependency>
 			<groupId>com.microsoft.playwright</groupId>
 			<artifactId>playwright</artifactId>
 			<version>1.44.0</version>
@@ -17,9 +22,10 @@
 		<dependency>
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
-			<version>7.10.2</version>
+			<version>7.11.0</version>
 			<scope>test</scope>
 		</dependency>
+
 
 	</dependencies>
 
